--- a/app/src/main/res/drawable/bg_white_radius_10_bottom.xml
+++ b/app/src/main/res/drawable/bg_white_radius_10_bottom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <corners android:bottomLeftRadius="10dp" android:bottomRightRadius="10dp" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <corners android:bottomLeftRadius="10dp"
+        android:bottomRightRadius="10dp" />
     <solid android:color="@color/color_191919_FCFCFC" />
 </shape>
