--- a/app/src/main/res/layout/view_game_tab_match_type_v4.xml
+++ b/app/src/main/res/layout/view_game_tab_match_type_v4.xml
@@ -15,6 +15,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:tabPaddingStart="9dp"
         app:tabPaddingEnd="9dp"
+        android:clipToPadding="false"
         app:tabGravity="fill"
         app:tabIndicatorFullWidth="false"
         app:tabIndicator="@drawable/bg_matchtype_indicator"
