--- a/app/src/main/res/layout/activity_detail_sport.xml
+++ b/app/src/main/res/layout/activity_detail_sport.xml
@@ -177,6 +177,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <FrameLayout
+        android:id="@+id/frameLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -201,8 +202,9 @@
                     android:layout_height="match_parent"
                     android:nestedScrollingEnabled="false"
                     android:paddingTop="5dp"
+                    app:layout_anchor="@+id/frameLayout"
+                    app:layout_anchorGravity="center"
                     tools:listitem="@layout/content_odds_detail_list_item" />
-
                 <WebView
                     android:id="@+id/wv_analyze"
                     android:layout_width="match_parent"
@@ -229,6 +231,7 @@
         android:layout_gravity="bottom"
         app:layout_constraintBottom_toBottomOf="parent" />
 
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     <include
@@ -236,33 +239,8 @@
         layout="@layout/bet_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="@dimen/bet_list_bar_height"
-        android:layout_marginBottom="56dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:visibility="visible" />
-    <!--    <androidx.constraintlayout.widget.ConstraintLayout-->
-    <!--        android:id="@+id/cl_bottom"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="600dp"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent">-->
-
-    <!--        <include-->
-    <!--            android:id="@+id/cl_bet_list_bar"-->
-    <!--            layout="@layout/bet_bar_layout"-->
-    <!--            android:layout_width="match_parent"-->
-    <!--            android:layout_height="@dimen/bet_list_bar_height"-->
-    <!--            android:layout_marginBottom="56dp"-->
-    <!--            android:visibility="gone"-->
-    <!--            app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--            tools:visibility="visible" />-->
-    <!---->
-    <!--        <WebView-->
-    <!--            android:id="@+id/wv_chat"-->
-    <!--            android:layout_width="match_parent"-->
-    <!--            android:layout_height="56dp"-->
-    <!--            app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--            android:visibility="visible" />-->
-    <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent" />
     <FrameLayout
         android:id="@+id/fl_bet_list"
         android:layout_width="match_parent"
