--- a/app/src/main/res/layout/view_toolbar_detail_live.xml
+++ b/app/src/main/res/layout/view_toolbar_detail_live.xml
@@ -42,7 +42,7 @@
                 android:textColor="@color/color_317FFF_0760D4"
                 android:textSize="@dimen/margin_14" />
 
-            <com.pili.pldroid.player.widget.PLVideoView
+            <org.cxct.sportlottery.widget.OKVideoPlayer
                 android:id="@+id/player_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -100,6 +100,15 @@
         </LinearLayout>
 
         <ImageView
+            android:id="@+id/iv_live_sound"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_gravity="bottom|left"
+            android:layout_marginLeft="@dimen/margin_15"
+            android:layout_marginBottom="@dimen/margin_10"
+            android:src="@drawable/selector_live_sound" />
+
+        <ImageView
             android:id="@+id/iv_fullscreen"
             android:layout_width="25dp"
             android:layout_height="25dp"
@@ -107,6 +116,5 @@
             android:layout_margin="@dimen/margin_15"
             android:padding="@dimen/margin_5"
             android:src="@drawable/selector_fullscreen" />
-
     </FrameLayout>
 </LinearLayout>
