--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,6 +26,7 @@
     <color name="color_F75452">#F75452</color>
     <color name="color_b73a20">#b73a20</color>
     <color name="color_FFFFFF">#FFFFFF</color>
+    <color name="color_B2_FFFFFF">#B2FFFFFF</color>
     <color name="color_191919">#191919</color>
     <color name="color_1C1C1C">#1C1C1C</color>
     <color name="color_FCFCFC">#FCFCFC</color>
