世界杯-主页底部栏

--- a/app/src/main/res/layout/activity_main_tab.xml
+++ b/app/src/main/res/layout/activity_main_tab.xml
@@ -23,12 +23,12 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="-8dp">
+                android:layout_marginTop="0dp">
 
                 <org.cxct.sportlottery.widget.bottomnavigationview.BottomNavigationViewEx
                     android:id="@+id/bottom_navigation_view"
                     android:layout_width="match_parent"
-                    android:layout_height="64dp"
+                    android:layout_height="58dp"
                     app:elevation="1dp"
                     android:background="@drawable/bg_icon_bottom_bar"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -79,6 +79,7 @@
         android:id="@+id/fl_bet_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:alpha="0"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:visibility="gone" />
     <androidx.fragment.app.FragmentContainerView
