--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -461,6 +461,7 @@
     <color name="color_44E23434">#44E23434</color>
     <color name="color_80414655">#80414655</color>
     <color name="color_E5EFFF">#E5EFFF</color>
+    <color name="color_EC9007">#EC9007</color>
     <!--region keyboard-->
     <color name="color_43546F">#43546F</color>
     <color name="color_5A799E">#5A799E</color>
