--- a/app/src/main/res/layout/fragment_home_elec.xml
+++ b/app/src/main/res/layout/fragment_home_elec.xml
@@ -245,6 +245,17 @@
                 android:textColor="@color/color_414655"
                 android:textSize="@dimen/textSize14sp" />
 
+            <TextView
+                android:id="@+id/new_game_testing"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="6dp"
+                android:text="@string/new_game_and_testing"
+                android:textAllCaps="true"
+                android:textColor="@color/color_EC9007"
+                android:textSize="@dimen/textSize14sp" />
+
+
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
