--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -139,6 +139,7 @@
     <color name="color_21B6C8FF">#21B6C8FF</color>
     <color name="color_B6C8FF">#B6C8FF</color>
     <color name="color_9CB4FC">#9CB4FC</color>
+    <color name="color_B3F0F5FA">#B3F0F5FA</color>
     <!--以下部分，是系统中的白天的色值 -->
     <!--命名規則，color_[夜間色碼]_[白天色碼] -->
 
