--- a/app/src/main/res/drawable/selector_sport_tab_left.xml
+++ b/app/src/main/res/drawable/selector_sport_tab_left.xml
@@ -2,5 +2,5 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@color/color_E5EFFF" android:state_selected="true" />
     <item android:drawable="@color/color_E5EFFF" android:state_pressed="true" />
-    <item android:drawable="@color/transparent" />
+    <item android:drawable="@color/color_FFFFFF" />
 </selector>
