--- a/app/src/main/res/layout/hot_card_game_include.xml
+++ b/app/src/main/res/layout/hot_card_game_include.xml
@@ -55,6 +55,7 @@
         android:paddingHorizontal="@dimen/margin_15"
         android:layout_marginTop="@dimen/margin_8"
         android:paddingBottom="@dimen/margin_30"
+        android:clipToPadding="false"
         app:layout_constraintTop_toBottomOf="@+id/iv_poker_game"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
