--- a/app/src/main/res/layout/view_toolbar_home.xml
+++ b/app/src/main/res/layout/view_toolbar_home.xml
@@ -5,6 +5,7 @@
     android:id="@+id/toolBar"
     android:layout_width="match_parent"
     android:layout_height="@dimen/tool_bar_height"
+    android:background="@color/color_B3F0F5FA"
     android:paddingHorizontal="18dp"
     android:gravity="center_vertical"
     android:orientation="horizontal"
@@ -64,7 +65,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="@dimen/margin_8"
-            android:layout_marginEnd="@dimen/margin_14"
+            android:layout_marginEnd="@dimen/margin_4"
             android:src="@drawable/ic_refresh_green" />
     </LinearLayout>
     <LinearLayout
