--- a/app/src/main/res/layout/activity_detail_sport.xml
+++ b/app/src/main/res/layout/activity_detail_sport.xml
@@ -174,6 +174,12 @@
                     android:padding="@dimen/margin_10"
                     android:src="@drawable/selector_arrow_blue_double" />
             </LinearLayout>
+
+            <View
+                android:id="@+id/vDivider"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/color_E3E8EE"/>
         </LinearLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
