--- a/app/src/main/res/layout/item_home_handicap.xml
+++ b/app/src/main/res/layout/item_home_handicap.xml
@@ -132,18 +132,19 @@
         app:layout_constraintTop_toBottomOf="@+id/ll_group"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="@dimen/margin_25">
         <TextView
-            android:visibility="gone"
             android:id="@+id/tvGameStatus"
             android:paddingVertical="@dimen/margin_4"
-            android:layout_marginStart="@dimen/margin_10"
+            android:paddingStart="@dimen/margin_10"
+            android:textSize="@dimen/textSize12sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="上半场"/>
         <TextView
             android:id="@+id/tv_game_play_time"
-            android:layout_marginStart="@dimen/margin_6"
+            android:textSize="@dimen/textSize12sp"
+            android:paddingStart="@dimen/margin_6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="80：02"/>
