--- a/app/src/main/res/layout/fragment_home_worldcup.xml
+++ b/app/src/main/res/layout/fragment_home_worldcup.xml
@@ -3,26 +3,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/background"
+    android:background="@drawable/bg_worldcup"
     android:orientation="vertical"
     android:id="@+id/rootView">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
 
     <ImageView
         android:id="@+id/ivBg"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/bg_worldcup_top"/>
+        android:layout_height="295dp"
+        android:scaleType="centerCrop"/>
 
-        <WebView
-            android:id="@+id/webView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </LinearLayout>
+    <WebView
+        android:id="@+id/webView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="142dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_tab_home"
