--- a/app/src/main/res/layout/activity_detail_sport.xml
+++ b/app/src/main/res/layout/activity_detail_sport.xml
@@ -184,42 +184,30 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <FrameLayout
-        android:id="@+id/frameLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <androidx.core.widget.NestedScrollView
-            android:id="@+id/sv_content"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_detail"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fillViewport="true">
+            android:clipToPadding="false"
+            android:paddingHorizontal="10dp"
+            android:paddingBottom="10dp"
+            tools:listitem="@layout/content_odds_detail_list_group_4_item" />
 
-            <FrameLayout
-                android:id="@+id/fl_content"
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/ns_analyze"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone">
+
+            <WebView
+                android:id="@+id/wv_analyze"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/color_F0F5FA"
-                android:visibility="visible">
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rv_detail"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:nestedScrollingEnabled="false"
-                    android:paddingTop="5dp"
-                    app:layout_anchor="@+id/frameLayout"
-                    app:layout_anchorGravity="center"
-                    tools:listitem="@layout/content_odds_detail_list_item" />
-                <WebView
-                    android:id="@+id/wv_analyze"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:nestedScrollingEnabled="false"
-                    android:visibility="gone" />
-
-            </FrameLayout>
+                android:nestedScrollingEnabled="false" />
         </androidx.core.widget.NestedScrollView>
 
         <WebView
