--- a/app/src/main/res/drawable/ic_arrow_right_gray.xml
+++ b/app/src/main/res/drawable/ic_arrow_right_gray.xml
@@ -1,10 +1,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="10dp"
-    android:height="10dp"
-    android:viewportWidth="10"
-    android:viewportHeight="10">
-  <path
-      android:pathData="M7.5,4.811L2.5,0.833 2.5,2.188 6.036,5.001 2.5,7.813 2.5,9.167 2.501,9.167 7.5,5.189z"
-      android:fillColor="#999"
-      android:fillType="evenOdd"/>
+    android:width="8dp"
+    android:height="13dp"
+    android:viewportWidth="8"
+    android:viewportHeight="13">
+    <path
+        android:pathData="M0.671,0.66C0.443,0.873 0.443,1.218 0.671,1.431L6.092,6.5L0.671,11.569C0.443,11.782 0.443,12.127 0.671,12.34C0.899,12.553 1.268,12.553 1.496,12.34L7.329,6.886C7.439,6.783 7.5,6.645 7.5,6.5C7.5,6.355 7.439,6.216 7.329,6.114L1.496,0.66C1.268,0.447 0.899,0.447 0.671,0.66Z"
+        android:strokeWidth="1"
+        android:fillColor="#CCCCCC"
+        android:fillType="nonZero"
+        android:strokeColor="#00000000" />
 </vector>
