--- a/app/src/main/res/layout/fragment_other_bet_record.xml
+++ b/app/src/main/res/layout/fragment_other_bet_record.xml
@@ -38,13 +38,14 @@
         android:visibility="visible" />
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginHorizontal="@dimen/margin_20"
         android:background="@drawable/bg_square_shape_6dp_gray_deposit_stroke"
         android:orientation="vertical"
         android:layout_marginTop="@dimen/margin_10"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="15dp"
         app:layout_constraintTop_toBottomOf="@id/tvUsTime"
+        app:layout_constraintBottom_toTopOf="@+id/layout_total"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
