--- a/app/src/main/res/layout/button_odd.xml
+++ b/app/src/main/res/layout/button_odd.xml
@@ -54,6 +54,7 @@
 
 
         <LinearLayout
+            android:id="@+id/ll_status_group"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center">
