--- a/app/src/main/res/layout/button_odd_outright.xml
+++ b/app/src/main/res/layout/button_odd_outright.xml
@@ -62,6 +62,7 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
         <LinearLayout
+            android:id="@+id/ll_odd_outright"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center">
