处理棋牌列表截断显示

--- a/app/src/main/res/layout/fragment_home_slot.xml
+++ b/app/src/main/res/layout/fragment_home_slot.xml
@@ -25,6 +25,7 @@
         android:id="@+id/rv_slot"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="@dimen/margin_12"
         tools:itemCount="3"
         tools:listitem="@layout/item_home_slot" />
 
