--- a/app/src/main/res/layout/item_home_slot.xml
+++ b/app/src/main/res/layout/item_home_slot.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="@dimen/margin_15"
-    android:layout_marginTop="@dimen/margin_12"
+    android:layout_marginVertical="@dimen/margin_6"
     app:cardElevation="2dp"
     app:cardCornerRadius="10dp">
 
