修改密码需求处理

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -99,7 +99,7 @@
                     app:primaryColor="@color/color_AFAFB1">
 
                     <org.cxct.sportlottery.widget.boundsEditText.ExtendedEditText
-                        android:id="@+id/eet_account"
+                        android:id="@+id/eet_account_forget"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:imeOptions="actionNext"
@@ -133,7 +133,7 @@
                         app:primaryColor="@color/color_AFAFB1">
 
                         <org.cxct.sportlottery.widget.boundsEditText.ExtendedEditText
-                            android:id="@+id/eet_verification_code"
+                            android:id="@+id/eet_verification_code_forget"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:imeOptions="actionNext"
@@ -181,6 +181,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
 
                 android:id="@+id/first_pager"
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@+id/cl_account"
